--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,14 @@
-<!-- extend from base layout -->
-{% extends "base.html" %}
-
-{% block content %}
-<h1>Sign In</h1>
-<form action="" method="post" name="login">
-
-    <p>
-        Please enter your OpenID:<br>
-        {{form.openid(size=80)}}<br>
-    </p>
-    <p>{{form.remember_me}} Remember Me</p>
-    <p><input type="submit" value="Sign In"></p>
-</form>
+{% extends "layout.html" %}
+{% block body %}
+  <h2>Login</h2>
+  {% if error %}<p class=error><strong>Error:</strong> {{ error }}{% endif %}
+  <form action="{{ url_for('login') }}" method=post>
+    <dl>
+      <dt>Username:
+      <dd><input type=text name=username>
+      <dt>Password:
+      <dd><input type=password name=password>
+      <dd><input type=submit value=Login>
+    </dl>
+  </form>
 {% endblock %}
