--- a/flaskr/templates/blog/index.html
+++ b/flaskr/templates/blog/index.html
@@ -15,9 +15,10 @@
           <h1><a class="action" href="{{ url_for('blog.view_post', id=post['id']) }}">{{ post['title'] }}</a></h1> 
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
-        {% if g.user['id'] == post['author_id'] %}
+        <!-- {% if g.user['id'] == post['author_id'] %}
           <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
-        {% endif %}
+        {% endif %} -->
+        <!-- index 也文章标题后添加编辑选项 -->
       </header>
       <p class="body">{{ post['body'] }}</p>
     </article>
