--- a/flaskr/templates/blog/post.html
+++ b/flaskr/templates/blog/post.html
@@ -34,6 +34,13 @@
       </article>
     {% endfor %}
   </div>
+  <!-- <div>
+        <h1>{{ post['title'] }}</h1> 
+        <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+      </div>
+      {% if g.user['id'] == post['author_id'] %}
+        <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
+      {% endif %} -->
   <div>
     <form method="post">
       <!-- <label for="title">Comments</label>
